Fixed issue where messaging input div would be too wide

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,9 +43,5 @@
 	bottom: 0;
 	width: 100%;
 	height: 10vh;
-	background-color: white;
-}
-
-.message_input div{
-	background-color: white;
+	box-shadow: 0px -1px 5px 0px #d8d8d8;
 }
